# paper-clip-maximizer

./: Anchor.toml  README.md  package-lock.json  package.json  paper_clip_maximizer-keypair.json
programs/paper-clip-maximizer/: Cargo.toml
programs/paper-clip-maximizer/src/: instructions.rs  lib.rs  states.rs
tests/: paper-clip-maximizer.ts
