[package]
name = "paper-clip-maximizer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "paper_clip_maximizer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {git = "https://github.com/blockworks-foundation/anchor.git", branch = "application-fee-tests"}
solana-program = {git = "https://github.com/blockworks-foundation/solana.git", branch = "application-fees-v1.13.5"}
solana-application-fees-program  = { git = "https://github.com/blockworks-foundation/solana.git", branch = "application-fees-v1.13.5" }
solana-sdk = {git = "https://github.com/blockworks-foundation/solana.git", branch = "application-fees-v1.13.5", default-features = false, optional = true }
